cargo-features = ["strip"]

[package]
name = "wink-mqtt-rs"
version = "0.1.0"
authors = ["Mike Kaplinskiy <mike.kaplinskiy@gmail.com>"]
edition = "2018"
license = "CC-BY-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-async-client = "0.1.5"
clap = "3.0.0-beta.1"
slog = "2.5.2"
slog-term = "2.6.0"
url = "2.1.1"
simple-error = "0.2.1"
rustls = "0.16.0"
rustls-native-certs = "0.2.0"
regex = "1"
lazy_static = "1.4.0"
tokio = "0.2.22"
slog-stdlog = "4.0.0"
slog-scope = "4.3.0"
subprocess = "0.2.4"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
