cargo-features = ["strip"]

[package]
name = "wink-mqtt-rs"
version = "0.2.1-prerelease"
authors = ["Mike Kaplinskiy <mike.kaplinskiy@gmail.com>"]
edition = "2018"
license = "CC-BY-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.4"
async-trait = "0.1.42"
clap = "3.0.0-beta.1"
futures = "0.3.13"
hyper = {version = "0.13.9", features=["runtime", "tcp"], default-features=false}
lazy_static = "1.4.0"
log = "*"
regex = "1"
rumqttc = "0.2.0"
rust-embed = {version="5.7.0", features=["compression"]}
serde = {version="1.0.118", features=["derive"]}
serde_json = "1.0"
simple-error = "0.2.1"
slog = {version = "2.5.2", features=["max_level_trace"]}
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.6.0"
subprocess = "0.2.4"
tokio = {version = "0.2.22", features=["blocking", "rt-core", "process"]}
url = "2.1.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
